--- a/css/accueil.scss
+++ b/css/accueil.scss
@@ -33,7 +33,6 @@ a {
         border-radius: 50%;
         animation: spinner 3s;
     }
-
 }
 
 @keyframes background-loader {
@@ -46,21 +45,16 @@ a {
     }
 
     100% {
-        transform: scale(0);
-      
+        transform: scale(0);      
     }
 }
 
 @keyframes spinner {
     0%{
-        transform: rotate(0deg) scale(1);
+        transform: rotate(0deg);
     }
-
-
-
     100% {
-        transform: rotate(760deg) scale(1);
-      
+        transform: rotate(760deg);      
     }
 }
 
@@ -124,7 +118,7 @@ a {
         color: white;
         border: none;
         margin-bottom: 2%;
-        box-shadow: 0px 10px 10px 0px;
+        box-shadow: 3px 3px 3px gray;
         &:hover {
             background: linear-gradient(#f7a4df, #af7eec);
         }
@@ -210,7 +204,7 @@ a {
     }
     &__carte {
         width: 40%;
-        height: 450px;
+        height: 350px;
         background-color: white;
         border-radius: 20px 20px 20px 20px;
         box-shadow: 0px 0px 7px 0px;
@@ -220,8 +214,9 @@ a {
     }      
     &__img {
         object-fit: cover;
-        height: 350px;
+        height: 250px;
         width: 100%;
+        // Permet de gérer la position de l'image
         object-position: 70% 63%;
         border-radius: 20px 20px 0px 0px;
     }
@@ -238,38 +233,28 @@ a {
         & p {
             margin-top: 0%;
         }
-
         & .heart {
             margin-right: 8%;
-            padding-top: 6%; 
-            cursor: pointer;         
-        
-        & i {           
-            position: absolute;
-        }
-        & .jauge {
-            position: absolute;
-            top: 380px;
-        }
-            
-        & .jauge_remplissage {    
-                background-image:  linear-gradient(#FF79DA, #9356DC);
-                -webkit-background-clip: text;
-                background-clip: text;              
+            padding-top: 6%;       
+            & .jauge {
                 position: absolute;
-                top: 380px;
-                opacity: 0;
-                color: transparent;
-                transition: all 1s ease-in-out;
+                top: 290px;
+            }                
+            & .jauge_remplissage {    
+                    background-image:  linear-gradient(#FF79DA, #9356DC);
+                    // Permet que le background s'affiche à l'intérieur du coeur
+                    background-clip: text;              
+                    position: absolute;
+                    top: 290px;
+                    opacity: 0;
+                    color: transparent;
+                    transition: all 1s ease-in-out;
+                    &:hover {
+                        opacity: 1;
+                    }
+            }
         }
-
-        &:hover .jauge_remplissage {
-            opacity: 1;
-            } 
     }
-    }
-
-
     //  Affichage étiquettes "nouveau" en haut à droite de la carte
     .nouveau {
         &::before {
@@ -328,11 +313,11 @@ footer {
         padding: 4%;
         border-radius: 30px 30px 30px 30px;
         background: linear-gradient(#FF79DA, #9356DC);
+        box-shadow: 3px 3px 3px gray;
         color: white;
         border: none;
         margin-top: 7%;
         margin-bottom: 10%;
-        box-shadow: 0px 10px 10px 0px;
     }
 
     @mixin fleche_header {
@@ -443,7 +428,6 @@ footer {
             letter-spacing: 0px;
             font-size: 30px;
             margin-left: 5%;
-
         }
         &__flex {
             margin-left: 3%;
@@ -457,37 +441,64 @@ footer {
             box-shadow: 0px 0px 7px 0px;
             margin-bottom: 5%;
             position: relative;
+            &::before {
+                & .heart {
+                    margin-right: 8%;
+                    padding-top: 6%; 
+                    cursor: pointer;       
+                & i {           
+                    position: absolute;
+                }
+                & .jauge {
+                    position: absolute;
+                    top: 380px;
+                }                    
+                & .jauge_remplissage {    
+                        background-image:  linear-gradient(#FF79DA, #9356DC);
+                        -webkit-background-clip: text;
+                        background-clip: text;              
+                        position: absolute;
+                        top: 380px;
+                        opacity: 0;
+                        color: transparent;
+                        transition: all 1s ease-in-out;
+                }        
+                &:hover .jauge_remplissage {
+                    opacity: 1;
+                    } 
+                }
+            }
         }      
-        &__img {
-            object-fit: cover;
-            height: 180px;
-            width: 100%;
-            object-position: 70% 63%;
-            border-radius: 20px 20px 0px 0px;
-        }
-        &__carte__bas {
-            margin-bottom: 3%;
-            margin-left: 3%;
-            margin-right: 3%;
-            display: flex;
-            justify-content: space-between;
-            & h3 {
-                margin-bottom: 0%;
-                margin-top: 5%;
+            &__img {
+                object-fit: cover;
+                height: 180px;
+                width: 100%;
+                object-position: 70% 63%;
+                border-radius: 20px 20px 0px 0px;
             }
-            & p {
-                margin-top: 0%;
-            }
-            & i {
-                width: 50px;
-                padding-top: 8%;                
-            }
-            & .jauge {
-                top: 400px;
-            }
-            & .jauge_remplissage {
-                top: 400px;
-            }
+            &__carte__bas {
+                margin-bottom: 3%;
+                margin-left: 3%;
+                margin-right: 3%;
+                display: flex;
+                justify-content: space-between;
+                & h3 {
+                    margin-bottom: 0%;
+                    margin-top: 5%;
+                }
+                & p {
+                    margin-top: 0%;
+                }
+                & i {
+                    width: 50px;
+                    padding-top: 8%;                
+                }
+                & .jauge {
+                    top: 400px;
+                }
+                & .jauge_remplissage {
+                    top: 400px;
+                }
         }
 
         .nouveau {
