--- a/css/restaurants.css
+++ b/css/restaurants.css
@@ -1,3 +1,19 @@
+@-webkit-keyframes affichage {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes affichage {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 body {
   margin: 0%;
   padding: 0%;
@@ -91,6 +107,7 @@ h1 {
   display: grid;
   place-items: center;
   padding-top: 40px;
+  color: white;
 }
 .carte:hover .animation_check {
   margin-right: 0%;
@@ -99,31 +116,7 @@ h1 {
   transform: rotate(-360deg);
   transition: transform 500ms;
 }
-.carte i {
-  color: white;
-}
 
-@-webkit-keyframes affichage {
-  0% {
-    transform: translateY(0);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-@keyframes affichage {
-  0% {
-    transform: translateY(0);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
 .titre_plat {
   margin-left: 4%;
   margin-bottom: 0%;
@@ -142,7 +135,7 @@ h1 {
   border: none;
   margin-bottom: 5%;
   margin-top: 4%;
-  box-shadow: 0px 10px 10px 0px;
+  box-shadow: 3px 3px 3px gray;
   font-size: 200%;
 }
 .bouton input:hover {
@@ -293,26 +286,6 @@ footer a {
   .carte__prix:hover .animation_check {
     margin-right: -10px;
   }
-  @-webkit-keyframes affichage {
-    0% {
-      transform: translateY(20px);
-      opacity: 0;
-    }
-    100% {
-      transform: rotateY(0);
-      opacity: 1;
-    }
-  }
-  @keyframes affichage {
-    0% {
-      transform: translateY(20px);
-      opacity: 0;
-    }
-    100% {
-      transform: rotateY(0);
-      opacity: 1;
-    }
-  }
   .titre_plat {
     margin-left: 5%;
     margin-bottom: 0%;
@@ -331,7 +304,7 @@ footer a {
     border: none;
     margin-bottom: 12%;
     margin-top: 12%;
-    box-shadow: 0px 10px 10px 0px;
+    box-shadow: 3px 3px 3px gray;
     font-size: 100%;
   }
   footer {
