--- a/css/restaurants.scss
+++ b/css/restaurants.scss
@@ -1,5 +1,15 @@
 // VERSION DESKTOP
 
+//  Animation affichage plat
+@keyframes affichage {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 body {
     margin: 0%;
     padding: 0%;
@@ -10,6 +20,7 @@ body {
 h1 {
     font-family: 'Shrikhand', sans-serif;
 }
+
 .h_restaurants {
     display: flex;
     flex-direction: row;
@@ -88,6 +99,7 @@ h1 {
                 display: grid;
                 place-items: center;
                 padding-top: 40px;
+                color: white; 
             }
         }     
         }
@@ -98,25 +110,7 @@ h1 {
                 transition: transform 500ms;
             }
         }        
-        & i {
-            color: white; 
-        }
-}
-
-
-
-
-//  Animation affichage plat
-@keyframes affichage {
-    0% {
-        transform: translateY(0);
-        opacity: 0;
     }
-    100% {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
 
 .titre_plat {
     margin-left: 4%;
@@ -135,7 +129,7 @@ h1 {
         border: none;
         margin-bottom: 5%;
         margin-top: 4%;
-        box-shadow: 0px 10px 10px 0px;
+        box-shadow: 3px 3px 3px gray;
         font-size: 200%;
         &:hover {
             background: linear-gradient(#f7a4df, #af7eec);
@@ -250,8 +244,7 @@ footer {
     text-overflow: ellipsis;
     position: relative;
     animation-name: affichage;
-    animation-duration: 2s; 
-        
+    animation-duration: 2s;         
     & .carte__texte {
         width: 135%;
         white-space: nowrap;
@@ -272,14 +265,11 @@ footer {
             white-space: nowrap;
             text-overflow: ellipsis;
         }
-        }
+    }
     &__prix {
         width: 40%;
         margin-left: 0%;
         margin-right: 2%;
-        // background-color: transparent;
-        
-        // background-color: transparent;
         & .price {
             margin-top: 70%;
             margin-left: 0;
@@ -302,18 +292,6 @@ footer {
     }
 }
 
-
-@keyframes affichage {
-    0% {
-        transform: translateY(20px);
-        opacity: 0;
-    }
-    100% {
-        transform: rotateY(0);
-        opacity: 1;
-    }
-}
-
 .titre_plat {
     margin-left: 5%;
     margin-bottom: 0%;
@@ -333,7 +311,7 @@ footer {
         border: none;
         margin-bottom: 12%;
         margin-top: 12%;
-        box-shadow: 0px 10px 10px 0px;
+        box-shadow: 3px 3px 3px gray;
         font-size: 100%;
     }
 }
@@ -407,5 +385,4 @@ section {
         }
       }
     }
-
 }
