--- a/css/accueil.css
+++ b/css/accueil.css
@@ -75,81 +75,87 @@ a {
     transform: rotate(760deg);
   }
 }
+html {
+  margin: 0;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 .h h1 {
+  font-family: "Shrikhand", cursive;
+  text-shadow: none;
+  padding-top: 0%;
   display: flex;
   justify-content: center;
-  text-shadow: 1px 1px 1px #9356DC;
-  font-size: 300%;
-  padding-top: 1%;
 }
 .h__localisation {
-  display: flex;
-  justify-content: center;
-  border-top: 2px solid #FF79DA;
-  border-bottom: 2px solid #FF79DA;
-  box-shadow: 0px 0px 10px 0px #9356DC;
-  text-shadow: 1px 1px 1px #9356DC;
-  width: 100%;
-  height: 80px;
-  margin-top: 3%;
-  padding-right: 5%;
+  background-color: rgb(230, 225, 225);
+  box-shadow: 0px 0px 10px 0px;
+  margin-bottom: 0%;
+  width: 95%;
+  height: 60px;
+  margin-top: 7%;
 }
 .h__icon {
-  padding-top: 1.5%;
-  margin-right: 2%;
+  padding-top: 5.5%;
+  margin-right: 3%;
+  margin-left: 20%;
 }
-.h p {
-  padding-top: 0.7%;
+.h__input {
+  border: none;
+  outline: none;
+  background-color: rgb(230, 225, 225);
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  color: rgb(102, 102, 102);
 }
 
 .recherche_restaurant {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 2%;
+  margin-top: 0%;
+  background-color: #F2F2F2;
 }
 .recherche_restaurant h3 {
-  margin-top: 0%;
-  margin-bottom: 0%;
+  margin-left: 4%;
+  margin-top: 0;
+  margin-bottom: 0;
 }
-.recherche_restaurant .p_deux_recherche {
-  margin-bottom: 3%;
+.recherche_restaurant .p_un_recherche {
+  margin-top: 5%;
 }
 .recherche_restaurant p {
-  margin-top: 0%;
   margin-bottom: 0%;
+  margin-top: 0%;
+  margin-left: 7%;
 }
-.recherche_restaurant input {
-  padding: 1%;
-  margin-top: 3%;
+.recherche_restaurant .reservez {
+  margin-top: 5%;
+}
+.recherche_restaurant .bouton_lien {
+  padding: 9%;
   border-radius: 30px 30px 30px 30px;
   background: linear-gradient(#FF79DA, #9356DC);
+  box-shadow: 3px 3px 3px gray;
   color: white;
   border: none;
-  margin-bottom: 2%;
-  box-shadow: 3px 3px 3px gray;
+  margin-top: 10%;
+  margin-bottom: 10%;
 }
-.recherche_restaurant input:hover {
+.recherche_restaurant .bouton_lien:hover {
   background: linear-gradient(#f7a4df, #af7eec);
 }
 
 .fonctionnement__flex {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  display: block;
 }
 .fonctionnement h1 {
-  display: flex;
-  justify-content: center;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  border-top: 2px solid #FF79DA;
-  border-bottom: 2px solid #FF79DA;
-  box-shadow: 0px 0px 10px 0px #9356DC;
-  text-shadow: 1px 1px 1px #9356DC;
-  letter-spacing: 3px;
   font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  margin-left: 5%;
 }
 .fonctionnement__carte {
   display: flex;
@@ -157,17 +163,16 @@ a {
   background-color: #F2F2F2;
   border-radius: 20px 20px 20px 20px;
   box-shadow: 0px 0px 7px 0px;
-  width: 27%;
-  margin-top: 5%;
-  margin-bottom: 5%;
-  margin-right: 3%;
-  margin-left: 2%;
+  width: 80%;
+  margin-top: 10%;
+  margin-left: 10%;
+  margin-bottom: 15%;
 }
 .fonctionnement__carte:hover {
   background-color: #e2d5f1;
 }
 .fonctionnement__icon {
-  padding-top: 8%;
+  padding-top: 7.5%;
   margin-right: 5%;
   margin-left: 5%;
   color: grey;
@@ -176,57 +181,43 @@ a {
   color: #9356DC;
 }
 .fonctionnement__numero {
+  padding: 3%;
   background-color: #9356DC;
   border-radius: 50%;
   color: white;
-  width: 30px;
   position: relative;
-  left: -15px;
+  left: -18px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.restaurants {
-  width: 100%;
-  background-color: #F2F2F2;
-}
 .restaurants h1 {
-  padding-top: 3%;
-  padding-bottom: 2%;
-  font-size: 80px;
-  display: flex;
-  justify-content: center;
-  text-shadow: 1px 1px 1px #9356DC;
   font-family: "Roboto", sans-serif;
+  margin-left: 5%;
 }
 .restaurants__flex {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin-left: 10%;
+  margin-left: 6%;
+  margin-right: 2%;
+  padding-bottom: 10%;
 }
 .restaurants__carte {
-  width: 40%;
-  height: 350px;
+  width: 95%;
+  height: 250px;
   background-color: white;
-  border-radius: 20px 20px 20px 20px;
-  box-shadow: 0px 0px 7px 0px;
   margin-bottom: 5%;
-  margin-left: 3%;
-  position: relative;
 }
 .restaurants__img {
   -o-object-fit: cover;
      object-fit: cover;
-  height: 250px;
+  height: 180px;
   width: 100%;
   -o-object-position: 70% 63%;
      object-position: 70% 63%;
   border-radius: 20px 20px 0px 0px;
 }
 .restaurants__carte__bas {
-  margin-bottom: 1%;
+  margin-bottom: 3%;
   margin-left: 3%;
   margin-right: 3%;
   display: flex;
@@ -234,24 +225,29 @@ a {
 }
 .restaurants__carte__bas h3 {
   margin-bottom: 0%;
+  margin-top: 5%;
+  color: black;
 }
 .restaurants__carte__bas p {
   margin-top: 0%;
+  color: black;
 }
-.restaurants__carte__bas .heart {
-  margin-right: 8%;
-  padding-top: 6%;
+.restaurants__carte__bas i {
+  width: 50px;
+  padding-top: 8%;
 }
 .restaurants__carte__bas .heart .jauge {
   position: absolute;
-  top: 290px;
+  top: 181px;
+  right: 5px;
 }
 .restaurants__carte__bas .heart .jauge_remplissage {
   background-image: linear-gradient(#FF79DA, #9356DC);
   -webkit-background-clip: text;
           background-clip: text;
   position: absolute;
-  top: 290px;
+  top: 181px;
+  right: 5px;
   opacity: 0;
   color: transparent;
   transition: all 1s ease-in-out;
@@ -275,86 +271,109 @@ footer {
   display: flex;
   flex-direction: column;
   color: white;
+  padding-bottom: 5%;
 }
 footer h3 {
   font-family: "Shrikhand", cursive;
-  margin-left: 5%;
+  display: block;
+  margin-left: 7%;
 }
 footer i {
-  margin-right: 0.5%;
+  margin-right: 4%;
 }
 footer a {
-  margin-left: 4%;
-  margin-top: 1%;
+  margin-left: 5%;
+  margin-top: 4%;
   color: white;
 }
 
-@media screen and (max-width: 768px) {
-  h1 {
-    font-family: "Shrikhand", cursive;
-  }
-  html {
-    margin: 0;
-  }
-  body {
-    font-family: "Roboto", sans-serif;
-    margin: 0;
-    padding: 0;
-  }
+@media screen and (min-width: 992px) {
   .h h1 {
-    font-family: "Shrikhand", cursive;
-    text-shadow: none;
-    padding-top: 0%;
+    display: flex;
+    justify-content: center;
+    text-shadow: 1px 1px 1px #9356DC;
+    color: white;
+    font-size: 300%;
+    margin-top: 0%;
+    margin-bottom: 0%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    background: linear-gradient(#FF79DA, #9356DC);
   }
   .h__localisation {
-    border: none;
-    text-shadow: none;
-    background-color: rgb(230, 225, 225);
-    box-shadow: 0px 0px 10px 0px;
-    margin-bottom: 0%;
-    width: 95%;
-    height: 60px;
-    margin-top: 7%;
+    border-bottom: 2px solid #FF79DA;
+    box-shadow: 0px 0px 10px 0px #9356DC;
+    text-shadow: 1px 1px 1px #9356DC;
+    width: 100%;
+    height: 80px;
+    margin-top: 0%;
+    padding-top: 2%;
+    padding-bottom: 2%;
   }
   .h__icon {
-    padding-top: 4%;
-    margin-right: 3%;
+    padding-top: 2.8%;
+    margin-right: 1%;
+    margin-left: 44.5%;
+  }
+  .h p {
+    padding-top: 0.7%;
   }
   .recherche_restaurant {
-    margin-top: 0%;
-    background-color: #F2F2F2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 3%;
   }
   .recherche_restaurant h3 {
-    margin-left: 5%;
-  }
-  .recherche_restaurant p {
-    margin-bottom: 0%;
     margin-top: 0%;
-    margin-left: 7%;
+    margin-bottom: 0%;
+    margin-left: 2%;
   }
   .recherche_restaurant .reservez {
-    margin-top: 5%;
+    margin-top: 2%;
+  }
+  .recherche_restaurant .p_un_recherche {
+    margin-bottom: 0%;
+  }
+  .recherche_restaurant p {
+    margin-top: 0%;
+    margin-bottom: 2%;
+    margin-left: 3%;
+  }
+  .recherche_restaurant p.p_un_recherche {
+    margin-top: 2%;
   }
   .recherche_restaurant input {
-    padding: 4%;
+    padding: 1%;
+    margin-top: 2%;
     border-radius: 30px 30px 30px 30px;
     background: linear-gradient(#FF79DA, #9356DC);
-    box-shadow: 3px 3px 3px gray;
     color: white;
     border: none;
-    margin-top: 7%;
-    margin-bottom: 10%;
+    margin-bottom: 2%;
+    box-shadow: 3px 3px 3px gray;
+  }
+  .recherche_restaurant input:hover {
+    background: linear-gradient(#f7a4df, #af7eec);
   }
   .fonctionnement__flex {
-    display: block;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
   .fonctionnement h1 {
-    display: block;
-    border: none;
-    box-shadow: none;
-    text-shadow: none;
-    letter-spacing: 0px;
-    margin-left: 5%;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-left: 0%;
+    margin-top: 0%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    color: white;
+    background: linear-gradient(#FF79DA, #9356DC);
+    box-shadow: 0px 0px 10px 0px #9356DC;
+    font-family: "Roboto", sans-serif;
   }
   .fonctionnement__carte {
     display: flex;
@@ -362,16 +381,17 @@ footer a {
     background-color: #F2F2F2;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 0px 0px 7px 0px;
-    width: 80%;
-    margin-top: 10%;
-    margin-left: 10%;
-    margin-bottom: 15%;
+    width: 27%;
+    height: 60px;
+    margin-top: 5%;
+    margin-bottom: 1%;
+    margin-right: 3%;
+    margin-left: 2%;
   }
   .fonctionnement__carte:hover {
     background-color: #e2d5f1;
   }
   .fonctionnement__icon {
-    padding-top: 7%;
     margin-right: 5%;
     margin-left: 5%;
     color: grey;
@@ -380,73 +400,57 @@ footer a {
     color: #9356DC;
   }
   .fonctionnement__numero {
+    padding: 0.8%;
     background-color: #9356DC;
     border-radius: 50%;
     color: white;
+    width: 30px;
     position: relative;
-    left: -15px;
+    left: -16px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
+  .restaurants {
+    width: 100%;
+    background-color: #F2F2F2;
+  }
   .restaurants h1 {
-    display: block;
-    border: none;
-    box-shadow: none;
-    text-shadow: none;
-    letter-spacing: 0px;
-    font-size: 30px;
-    margin-left: 5%;
+    padding-top: 3%;
+    padding-bottom: 2%;
+    font-size: 60px;
+    display: flex;
+    justify-content: center;
+    text-shadow: 1px 1px 1px #9356DC;
+    font-family: "Roboto", sans-serif;
   }
   .restaurants__flex {
-    margin-left: 3%;
-    margin-right: 3%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: 10%;
   }
   .restaurants__carte {
-    width: 95%;
-    height: 250px;
+    width: 40%;
+    height: 320px;
     background-color: white;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 0px 0px 7px 0px;
     margin-bottom: 5%;
+    margin-left: 3%;
     position: relative;
-  }
-  .restaurants__carte::before .heart {
-    margin-right: 8%;
-    padding-top: 6%;
-    cursor: pointer;
-  }
-  .restaurants__carte::before .heart i {
-    position: absolute;
-  }
-  .restaurants__carte::before .heart .jauge {
-    position: absolute;
-    top: 380px;
-  }
-  .restaurants__carte::before .heart .jauge_remplissage {
-    background-image: linear-gradient(#FF79DA, #9356DC);
-    -webkit-background-clip: text;
-    background-clip: text;
-    position: absolute;
-    top: 380px;
-    opacity: 0;
-    color: transparent;
-    transition: all 1s ease-in-out;
-  }
-  .restaurants__carte::before .heart:hover .jauge_remplissage {
-    opacity: 1;
   }
   .restaurants__img {
     -o-object-fit: cover;
        object-fit: cover;
-    height: 180px;
+    height: 250px;
     width: 100%;
     -o-object-position: 70% 63%;
        object-position: 70% 63%;
     border-radius: 20px 20px 0px 0px;
   }
   .restaurants__carte__bas {
-    margin-bottom: 3%;
+    margin-bottom: 1%;
     margin-left: 3%;
     margin-right: 3%;
     display: flex;
@@ -454,20 +458,31 @@ footer a {
   }
   .restaurants__carte__bas h3 {
     margin-bottom: 0%;
-    margin-top: 5%;
   }
   .restaurants__carte__bas p {
     margin-top: 0%;
   }
-  .restaurants__carte__bas i {
-    width: 50px;
-    padding-top: 8%;
+  .restaurants__carte__bas .heart {
+    margin-right: 8%;
+    padding-top: 6%;
   }
-  .restaurants__carte__bas .jauge {
-    top: 400px;
+  .restaurants__carte__bas .heart .jauge {
+    position: absolute;
+    top: 250px;
+    color: black;
   }
-  .restaurants__carte__bas .jauge_remplissage {
-    top: 400px;
+  .restaurants__carte__bas .heart .jauge_remplissage {
+    background-image: linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+            background-clip: text;
+    position: absolute;
+    top: 250px;
+    opacity: 0;
+    color: transparent;
+  }
+  .restaurants__carte__bas .heart .jauge_remplissage:hover {
+    opacity: 1;
+    transition: all 1s;
   }
   .restaurants .nouveau::before {
     content: "Nouveau";
@@ -487,15 +502,15 @@ footer a {
   }
   footer h3 {
     font-family: "Shrikhand", cursive;
-    display: block;
-    margin-left: 7%;
+    margin-left: 5%;
   }
   footer i {
-    margin-right: 4%;
+    margin-right: 0.5%;
   }
   footer a {
-    margin-left: 5%;
-    margin-top: 4%;
+    margin-left: 4%;
+    margin-top: 1%;
+    color: white;
   }
 }
 @media all and (min-width: 768px) and (max-width: 992px) {
@@ -517,10 +532,10 @@ footer a {
   .restaurants__carte__bas h3 {
     margin-top: 4%;
   }
-  .restaurants__carte__bas .jauge {
-    top: 250px;
+  .restaurants__carte__bas .heart .jauge {
+    top: 180px;
   }
-  .restaurants__carte__bas .jauge_remplissage {
-    bottom: 250px;
+  .restaurants__carte__bas .heart .jauge_remplissage {
+    top: 180px;
   }
 }/*# sourceMappingURL=accueil.css.map */
