--- a/css/accueil.scss
+++ b/css/accueil.scss
@@ -6,8 +6,10 @@ body {
 }
 
 a {
-    text-decoration: none;    
+    text-decoration: none;  
 }
+
+
 
 // LOADING SPINNER 
 
@@ -58,7 +60,248 @@ a {
     }
 }
 
+// SMARTPHONE PAGE ACCUEIL
+
+html {
+    margin: 0;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+@mixin bouton {
+    padding: 9%;
+    border-radius: 30px 30px 30px 30px;
+    background: linear-gradient(#FF79DA, #9356DC);
+    box-shadow: 3px 3px 3px gray;
+    color: white;
+    border: none;
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+
+@mixin fleche_header {
+    margin-top: 8%;
+    color: rgb(85, 84, 84);
+    margin-left: 5%;
+    :hover {
+        color: #9356DC;
+    }        
+}
+
+// HEADER
+
+.h {
+    & h1 {
+        font-family: 'Shrikhand', cursive;
+        text-shadow: none;
+        padding-top: 0%;
+        display: flex;
+        justify-content: center;
+    }
+    &__localisation {
+        background-color: rgb(230, 225, 225);
+        box-shadow: 0px 0px 10px 0px;
+        margin-bottom: 0%;
+        width: 95%;
+        height: 60px;
+        margin-top: 7%;
+    }
+    &__icon {
+        padding-top: 5.5%;
+        margin-right: 3%;
+        margin-left: 20%;
+    }
+    &__input {
+        border: none;
+        outline: none;
+        background-color: rgb(230, 225, 225);
+        font-weight: bold;
+        font-family: 'Roboto', sans-serif;
+        font-size: 15px;
+        color: rgb(102, 102, 102);
+    }
+
+}
+
+.recherche_restaurant {
+    margin-top: 0%;
+    background-color: #F2F2F2;
+    & h3 {
+        margin-left: 4%;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    & .p_un_recherche {
+        margin-top: 5%;
+    }
+    & p {
+        margin-bottom: 0%;
+        margin-top: 0%;
+        margin-left: 7%;
+    }
+    & .reservez {
+        margin-top: 5%;
+    }
+    & .bouton_lien {
+        &:hover {
+            background: linear-gradient(#f7a4df, #af7eec);
+        }
+        @include bouton()     
+    }
+}
+
+.fonctionnement {
+    &__flex {
+        display: block;
+    }
+    & h1 {
+        font-family: 'Roboto', sans-serif;
+        font-weight: bold;
+        margin-left: 5%;
+    }
+    &__carte {
+        display: flex;
+        flex-direction: row;
+        background-color: #F2F2F2;
+        border-radius: 20px 20px 20px 20px;
+        box-shadow: 0px 0px 7px 0px;
+        width: 80%;
+        margin-top: 10%;
+        margin-left: 10%;
+        margin-bottom: 15%;
+        &:hover {
+            background-color: #e2d5f1;
+        }
+    }
+    &__icon {
+        padding-top: 7.5%;
+        margin-right: 5%;
+        margin-left: 5%;
+        color: grey;
+        &:hover {
+            color: #9356DC;
+        }
+    }
+    &__numero {
+        padding: 3%;
+        background-color: #9356DC;
+        border-radius: 50%;
+        color: white;
+        position: relative;
+        left: -18px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.restaurants {
+    & h1 {
+        font-family: 'Roboto', sans-serif;
+        margin-left: 5%;
+    }
+    &__flex {
+        margin-left: 6%;
+        margin-right: 2%;
+        padding-bottom: 10%;
+    }
+    &__carte {
+        width: 95%;
+        height: 250px;
+        background-color: white;
+        margin-bottom: 5%;
+    }      
+    &__img {
+        object-fit: cover;
+        height: 180px;
+        width: 100%;
+        object-position: 70% 63%;
+        border-radius: 20px 20px 0px 0px;
+    }
+    &__carte__bas {
+        margin-bottom: 3%;
+        margin-left: 3%;
+        margin-right: 3%;
+        display: flex;
+        justify-content: space-between;
+        & h3 {
+            margin-bottom: 0%;
+            margin-top: 5%;
+            color: black;
+        }
+        & p {
+            margin-top: 0%;
+            color: black;
+        }
+        & i {
+            width: 50px;
+            padding-top: 8%;                
+        }
+        & .heart {
+            & .jauge {
+                position: absolute;
+                top: 181px;
+                right: 5px;
+            }                
+            & .jauge_remplissage {    
+                    background-image:  linear-gradient(#FF79DA, #9356DC);
+                    // Permet que le background s'affiche à l'intérieur du coeur
+                    background-clip: text;              
+                    position: absolute;
+                    top: 181px;
+                    right: 5px;
+                    opacity: 0;
+                    color: transparent;
+                    transition: all 1s ease-in-out;
+                    &:hover {
+                        opacity: 1;
+                    }
+            }
+        }
+}
+    .nouveau {
+        &::before {
+            content: "Nouveau";
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            padding: 2%;
+            font-weight: bold;
+            background-color: rgb(123, 246, 209);
+            color: green;
+        }
+    }
+}
+
+
+footer {
+    background-color: rgb(44, 40, 40);
+    display: flex;
+    flex-direction: column;
+    color: white;
+    padding-bottom: 5%;
+    h3 {
+        font-family: 'Shrikhand', cursive ;
+        display: block;
+        margin-left: 7%;
+    }
+    i {
+        margin-right: 4%;
+    }
+    a {
+        margin-left: 5%;
+        margin-top: 4%;
+        color: white;
+    }
+}
+
 //  VERSION DESKTOP
+
+@media screen and (min-width: 992px) {   
 
 // Header
 .h {
@@ -66,25 +309,28 @@ a {
         display: flex;
         justify-content: center;
         text-shadow: 1px 1px 1px #9356DC;
+        color:white;
         font-size: 300%;
-        padding-top: 1%;
+        margin-top: 0%;
+        margin-bottom: 0%;
+        padding-top: 3%;
+        padding-bottom: 3%;
+        background: linear-gradient(#FF79DA, #9356DC);
     }
     &__localisation {
-        display: flex;
-        justify-content: center;
-        border-top: 2px solid #FF79DA;
         border-bottom: 2px solid #FF79DA;
-        // Effets juste pour la version desktop
         box-shadow: 0px 0px 10px 0px #9356DC;
         text-shadow: 1px 1px 1px #9356DC;
         width: 100%;
         height: 80px;
-        margin-top: 3%;
-        padding-right: 5%; 
+        margin-top: 0%;
+        padding-top: 2%;
+        padding-bottom: 2%;
     }
     &__icon {
-        padding-top: 1.5%;
-        margin-right: 2%;
+        padding-top: 2.8%;
+        margin-right: 1%;
+        margin-left: 44.5%;
     }
     & p {
         padding-top: 0.7%;
@@ -98,21 +344,29 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 2%;
+    padding-bottom: 3%;
     & h3 {
         margin-top: 0%;
         margin-bottom: 0%;
+        margin-left: 2%;
     }
-    & .p_deux_recherche {
-        margin-bottom: 3%;
+    .reservez {
+        margin-top: 2%;
+    }
+    & .p_un_recherche {
+        margin-bottom: 0%;
     }
     & p {
         margin-top: 0%;
-        margin-bottom: 0%;
+        margin-bottom: 2%;
+        margin-left: 3%;
+    &.p_un_recherche {
+        margin-top: 2%;
+        }
     }
     & input {
         padding: 1%;
-        margin-top: 3%;
+        margin-top: 2%;
         border-radius: 30px 30px 30px 30px;
         background: linear-gradient(#FF79DA, #9356DC);
         color: white;
@@ -134,14 +388,15 @@ a {
     & h1 {
         display: flex;
         justify-content: center;
+        width: 100%;
+        margin-left: 0%;
+        margin-top: 0%;
         padding-top: 2%;
         padding-bottom: 2%;
-        border-top: 2px solid #FF79DA;
-        border-bottom: 2px solid #FF79DA;
-        // Effets pour la version desktop
-        box-shadow: 0px 0px 10px 0px #9356DC;
-        text-shadow: 1px 1px 1px #9356DC;
-        letter-spacing: 3px;      
+    
+        color: white;
+        background: linear-gradient(#FF79DA, #9356DC);
+        box-shadow: 0px 0px 10px 0px #9356DC;    
         font-family: 'Roboto', sans-serif;  
     }
     &__carte {
@@ -151,8 +406,9 @@ a {
         border-radius: 20px 20px 20px 20px;
         box-shadow: 0px 0px 7px 0px;
         width: 27%;
+        height: 60px;
         margin-top: 5%;
-        margin-bottom: 5%;
+        margin-bottom: 1%;
         margin-right: 3%;
         margin-left: 2%;
         &:hover {
@@ -161,7 +417,6 @@ a {
         }
     }
     &__icon {
-        padding-top: 8%;
         margin-right: 5%;
         margin-left: 5%;
         color: grey;
@@ -171,13 +426,14 @@ a {
         }
     }
     &__numero {
+        padding: 0.8%;
         background-color: #9356DC;
         border-radius: 50%;
         color: white;
         width: 30px;
         position: relative;
         // Permet de décaler notre numéro sur la gauche du conteneur, à cheval 
-        left: -15px;
+        left: -16px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -190,7 +446,7 @@ a {
     & h1 {        
         padding-top: 3%;
         padding-bottom: 2%;
-        font-size: 80px;
+        font-size: 60px;
         display: flex;
         justify-content: center;
         text-shadow: 1px 1px 1px #9356DC;
@@ -204,7 +460,7 @@ a {
     }
     &__carte {
         width: 40%;
-        height: 350px;
+        height: 320px;
         background-color: white;
         border-radius: 20px 20px 20px 20px;
         box-shadow: 0px 0px 7px 0px;
@@ -238,19 +494,20 @@ a {
             padding-top: 6%;       
             & .jauge {
                 position: absolute;
-                top: 290px;
+                top: 250px;
+                color: black;
             }                
             & .jauge_remplissage {    
                     background-image:  linear-gradient(#FF79DA, #9356DC);
                     // Permet que le background s'affiche à l'intérieur du coeur
                     background-clip: text;              
                     position: absolute;
-                    top: 290px;
+                    top: 250px;
                     opacity: 0;
-                    color: transparent;
-                    transition: all 1s ease-in-out;
+                    color: transparent;                    
                     &:hover {
                         opacity: 1;
+                        transition: all 1s;
                     }
             }
         }
@@ -288,253 +545,14 @@ footer {
         color: white;
     }
 }
-
-
-
-@media screen and (max-width: 768px) {
-
-// SMARTPHONE PAGE ACCUEIL
-
-    h1 {
-        font-family: 'Shrikhand', cursive;
-    }
-
-    html {
-        margin: 0;
-    }
-
-    body {
-        font-family: 'Roboto', sans-serif;
-        margin: 0;
-        padding: 0;
-    }
-
-    @mixin bouton {
-        padding: 4%;
-        border-radius: 30px 30px 30px 30px;
-        background: linear-gradient(#FF79DA, #9356DC);
-        box-shadow: 3px 3px 3px gray;
-        color: white;
-        border: none;
-        margin-top: 7%;
-        margin-bottom: 10%;
-    }
-
-    @mixin fleche_header {
-        margin-top: 8%;
-        color: rgb(85, 84, 84);
-        margin-left: 5%;
-        :hover {
-            color: #9356DC;
-        }        
-    }
-
-    // HEADER
-
-    .h {
-        & h1 {
-            font-family: 'Shrikhand', cursive;
-            text-shadow: none;
-            padding-top: 0%;
-        }
-        &__localisation {
-            border: none;
-            text-shadow: none;
-            background-color: rgb(230, 225, 225);
-            box-shadow: 0px 0px 10px 0px;
-            margin-bottom: 0%;
-            width: 95%;
-            height: 60px;
-            margin-top: 7%;
-        }
-        &__icon {
-            padding-top: 4%;
-            margin-right: 3%;
-        }
-    }
-
-    .recherche_restaurant {
-        margin-top: 0%;
-        background-color: #F2F2F2;
-        & h3 {
-            margin-left: 5%;
-        }
-        & p {
-            margin-bottom: 0%;
-            margin-top: 0%;
-            margin-left: 7%;
-        }
-        & .reservez {
-            margin-top: 5%;
-        }
-        & input {
-            @include bouton()
-        }
-    }
-
-    .fonctionnement {
-        &__flex {
-            display: block;
-        }
-        & h1 {
-            display: block;
-            border: none;
-            box-shadow: none;
-            text-shadow: none;
-            letter-spacing: 0px;
-            margin-left: 5%;
-        }
-        &__carte {
-            display: flex;
-            flex-direction: row;
-            background-color: #F2F2F2;
-            border-radius: 20px 20px 20px 20px;
-            box-shadow: 0px 0px 7px 0px;
-            width: 80%;
-            margin-top: 10%;
-            margin-left: 10%;
-            margin-bottom: 15%;
-            &:hover {
-                background-color: #e2d5f1;
-            }
-        }
-        &__icon {
-            padding-top: 7%;
-            margin-right: 5%;
-            margin-left: 5%;
-            color: grey;
-            &:hover {
-                color: #9356DC;
-            }
-        }
-        &__numero {
-            background-color: #9356DC;
-            border-radius: 50%;
-            color: white;
-            position: relative;
-            left: -15px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-    }
-    
-    .restaurants {
-        & h1 {
-            display: block;
-            border: none;
-            box-shadow: none;
-            text-shadow: none;
-            letter-spacing: 0px;
-            font-size: 30px;
-            margin-left: 5%;
-        }
-        &__flex {
-            margin-left: 3%;
-            margin-right: 3%;
-        }
-        &__carte {
-            width: 95%;
-            height: 250px;
-            background-color: white;
-            border-radius: 20px 20px 20px 20px;
-            box-shadow: 0px 0px 7px 0px;
-            margin-bottom: 5%;
-            position: relative;
-            &::before {
-                & .heart {
-                    margin-right: 8%;
-                    padding-top: 6%; 
-                    cursor: pointer;       
-                & i {           
-                    position: absolute;
-                }
-                & .jauge {
-                    position: absolute;
-                    top: 380px;
-                }                    
-                & .jauge_remplissage {    
-                        background-image:  linear-gradient(#FF79DA, #9356DC);
-                        -webkit-background-clip: text;
-                        background-clip: text;              
-                        position: absolute;
-                        top: 380px;
-                        opacity: 0;
-                        color: transparent;
-                        transition: all 1s ease-in-out;
-                }        
-                &:hover .jauge_remplissage {
-                    opacity: 1;
-                    } 
-                }
-            }
-        }      
-            &__img {
-                object-fit: cover;
-                height: 180px;
-                width: 100%;
-                object-position: 70% 63%;
-                border-radius: 20px 20px 0px 0px;
-            }
-            &__carte__bas {
-                margin-bottom: 3%;
-                margin-left: 3%;
-                margin-right: 3%;
-                display: flex;
-                justify-content: space-between;
-                & h3 {
-                    margin-bottom: 0%;
-                    margin-top: 5%;
-                }
-                & p {
-                    margin-top: 0%;
-                }
-                & i {
-                    width: 50px;
-                    padding-top: 8%;                
-                }
-                & .jauge {
-                    top: 400px;
-                }
-                & .jauge_remplissage {
-                    top: 400px;
-                }
-        }
-
-        .nouveau {
-            &::before {
-                content: "Nouveau";
-                position: absolute;
-                top: 10px;
-                right: 10px;
-                padding: 2%;
-                font-weight: bold;
-                background-color: rgb(123, 246, 209);
-                color: green;
-            }
-        }
-    }
- 
-
-    footer {
-        background-color: rgb(44, 40, 40);
-        display: flex;
-        flex-direction: column;
-        color: white;
-        h3 {
-            font-family: 'Shrikhand', cursive ;
-            display: block;
-            margin-left: 7%;
-        }
-        i {
-            margin-right: 4%;
-        }
-        a {
-            margin-left: 5%;
-            margin-top: 4%;
-        }
-    }
 }
+
+
+
+// @media screen and (max-width: 768px) {
+
+
+// }
 
 @media all and (min-width: 768px) and (max-width: 992px) {
     // VERSION TABLETTE
@@ -560,12 +578,15 @@ footer {
             & h3 {
                 margin-top: 4%;
             }
-            & .jauge {
-                top: 250px;
+            & .heart {
+                & .jauge {
+                    top: 180px;
+                }
+                & .jauge_remplissage {
+                   top: 180px;
+                }
             }
-            & .jauge_remplissage {
-                bottom: 250px;
-            }
+
         }
       
     }
