--- a/css/restaurants.css
+++ b/css/restaurants.css
@@ -14,28 +14,17 @@
     opacity: 1;
   }
 }
-body {
-  margin: 0%;
-  padding: 0%;
-  box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-}
-
-h1 {
-  font-family: "Shrikhand", sans-serif;
-}
-
 .h_restaurants {
   display: flex;
   flex-direction: row;
 }
 .h_restaurants__titre {
-  font-size: 80px;
-  margin-left: 25%;
-  text-shadow: 1px 1px 1px #9356DC;
+  font-size: 30px;
+  margin-left: 20%;
+  text-shadow: none;
 }
 .h_restaurants__fleche {
-  padding-top: 10%;
+  padding-top: 9%;
   padding-left: 5%;
   font-weight: bold;
 }
@@ -44,19 +33,37 @@ h1 {
   max-width: 100%;
   max-height: 32rem;
   width: 100%;
-  min-width: 360px;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-.titre {
-  font-size: 50px;
-  display: flex;
-  justify-content: space-around;
-  border-radius: 40px 40px 40px 40px;
+.img_enchante {
+  max-height: 15rem;
+  -o-object-position: 70% 77%;
+     object-position: 70% 77%;
 }
-.titre i {
-  padding-top: 11%;
+
+.titre {
+  font-size: 15px;
+}
+.titre .heart .jauge {
+  top: -1px;
+  right: 30px;
+  position: absolute;
+}
+.titre .heart .jauge_remplissage {
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  -webkit-background-clip: text;
+          background-clip: text;
+  top: -1px;
+  right: 30px;
+  position: absolute;
+  opacity: 0;
+  color: transparent;
+}
+.titre .heart .jauge_remplissage:hover {
+  opacity: 1;
+  transition: all 1s;
 }
 
 .carte {
@@ -64,35 +71,52 @@ h1 {
   justify-content: space-between;
   border-radius: 20px 20px 20px 20px;
   box-shadow: 5px 5px 15px 0px #dedddd;
-  max-height: 100px;
   padding-top: 1px;
-  margin-bottom: 2%;
+  margin-bottom: 5%;
   margin-left: 3%;
   margin-right: 3%;
+  height: 90px;
   overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  position: relative;
   -webkit-animation-name: affichage;
           animation-name: affichage;
   -webkit-animation-duration: 2s;
           animation-duration: 2s;
 }
-.carte__texte {
-  width: 50%;
+.carte .carte__texte {
+  width: 135%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
-.carte p {
-  margin-left: 2%;
-}
-.carte h3 {
+.carte .carte__texte h3 {
+  width: 100%;
   margin-bottom: 0%;
   margin-left: 2%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.carte .carte__texte p {
+  width: 100%;
+  height: 50px;
+  margin-top: 4%;
+  margin-left: 1%;
+  margin-bottom: 0%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .carte__prix {
   display: flex;
   justify-content: flex-end;
-  width: 50%;
+  width: 40%;
   margin-left: 2%;
 }
 .carte__prix .price {
-  margin-top: 3%;
+  padding-top: 38%;
   margin-right: 3%;
   font-weight: bold;
 }
@@ -109,6 +133,9 @@ h1 {
   padding-top: 40px;
   color: white;
 }
+.carte:hover .price {
+  padding-top: 33%;
+}
 .carte:hover .animation_check {
   margin-right: 0%;
 }
@@ -118,8 +145,9 @@ h1 {
 }
 
 .titre_plat {
-  margin-left: 4%;
+  margin-left: 5%;
   margin-bottom: 0%;
+  margin-top: 10%;
 }
 
 .bouton {
@@ -128,18 +156,38 @@ h1 {
   align-items: center;
 }
 .bouton input {
-  padding: 2%;
-  border-radius: 60px 60px 60px 60px;
+  padding: 5%;
+  border-radius: 30px 30px 30px 30px;
   background: linear-gradient(#FF79DA, #9356DC);
   color: white;
   border: none;
-  margin-bottom: 5%;
-  margin-top: 4%;
+  margin-bottom: 12%;
+  margin-top: 12%;
   box-shadow: 3px 3px 3px gray;
-  font-size: 200%;
+  font-size: 100%;
 }
 .bouton input:hover {
   background: linear-gradient(#f7a4df, #af7eec);
+}
+
+footer {
+  background-color: rgb(44, 40, 40);
+  display: flex;
+  flex-direction: column;
+  color: white;
+}
+footer h3 {
+  font-family: "Shrikhand", cursive;
+  margin-left: 6%;
+}
+footer i {
+  margin-right: 4%;
+}
+footer a {
+  margin-left: 5%;
+  margin-top: 4%;
+  color: white;
+  text-decoration: none;
 }
 
 section {
@@ -154,60 +202,47 @@ section {
   background-color: #99E2D0;
   width: 45px;
   height: 4px;
-  margin-bottom: 2%;
-  margin-left: 4%;
+  margin-bottom: 5%;
+  margin-left: 5%;
 }
 
 .trait_plats {
   background-color: #99E2D0;
   width: 38px;
   height: 4px;
-  margin-bottom: 2%;
-  margin-left: 4%;
+  margin-bottom: 5%;
+  margin-left: 5%;
 }
 
 .trait_desserts {
   background-color: #99E2D0;
   width: 45px;
   height: 4px;
-  margin-bottom: 2%;
-  margin-left: 4%;
+  margin-bottom: 5%;
+  margin-left: 5%;
 }
 
-footer {
-  background-color: rgb(44, 40, 40);
-  display: flex;
-  flex-direction: column;
-  color: white;
-}
-footer h3 {
-  font-family: "Shrikhand", cursive;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-footer i {
-  margin-right: 0.5%;
-}
-footer a {
-  margin-left: 4%;
-  margin-top: 1%;
-  color: white;
-  text-decoration: none;
-}
-
-@media (max-width: 768px) {
+@media screen and (min-width: 992px) {
+  body {
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
+  }
+  h1 {
+    font-family: "Shrikhand", sans-serif;
+  }
   .h_restaurants {
     display: flex;
     flex-direction: row;
   }
   .h_restaurants__titre {
-    font-size: 30px;
-    margin-left: 20%;
-    text-shadow: none;
+    font-size: 80px;
+    margin-left: 25%;
+    text-shadow: 1px 1px 1px #9356DC;
   }
   .h_restaurants__fleche {
-    padding-top: 9%;
+    padding-top: 10%;
     padding-left: 5%;
     font-weight: bold;
   }
@@ -215,81 +250,86 @@ footer a {
     max-width: 100%;
     max-height: 32rem;
     width: 100%;
+    min-width: 360px;
     -o-object-fit: cover;
        object-fit: cover;
   }
-  .img_enchante {
-    max-height: 15rem;
-    -o-object-position: 70% 77%;
-       object-position: 70% 77%;
-  }
   .titre {
-    font-size: 15px;
+    font-size: 50px;
+    display: flex;
+    justify-content: space-around;
+    border-radius: 40px 40px 40px 40px;
   }
   .titre i {
-    padding-top: 8%;
+    padding-top: 8.5%;
+    margin-right: 5%;
   }
   .carte {
+    display: flex;
+    justify-content: space-between;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 5px 5px 15px 0px #dedddd;
+    max-height: 100px;
     padding-top: 1px;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
     margin-left: 3%;
     margin-right: 3%;
     overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    position: relative;
     -webkit-animation-name: affichage;
             animation-name: affichage;
     -webkit-animation-duration: 2s;
             animation-duration: 2s;
   }
   .carte .carte__texte {
-    width: 135%;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-  }
-  .carte .carte__texte h3 {
-    width: 100%;
-    margin-bottom: 0%;
-    margin-left: 2%;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    width: 50%;
   }
   .carte .carte__texte p {
-    width: 100%;
-    height: 50px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    margin-left: 2%;
+    margin-top: 2%;
+  }
+  .carte .carte__texte h3 {
+    margin-bottom: 0%;
+    margin-left: 2%;
   }
   .carte__prix {
-    width: 40%;
-    margin-left: 0%;
-    margin-right: 2%;
+    display: flex;
+    justify-content: flex-end;
+    width: 50%;
+    margin-left: 2%;
   }
   .carte__prix .price {
-    margin-top: 70%;
-    margin-left: 0;
-    margin-right: 20%;
+    padding-top: 7%;
+    margin-top: 3%;
+    margin-right: 3%;
+    font-weight: bold;
   }
   .carte__prix .animation_check {
-    margin-right: -107px;
-    width: 100px;
+    width: 80px;
     background-color: #99E2D0;
     height: 100%;
     border-radius: 0px 20px 20px 0px;
+    margin-right: -80px;
   }
-  .carte__prix:hover .animation_check {
-    margin-right: -10px;
+  .carte__prix .animation_check .i_check {
+    display: grid;
+    place-items: center;
+    padding-top: 40px;
+    color: white;
+  }
+  .carte:hover .price {
+    padding-top: 7%;
+  }
+  .carte:hover .animation_check {
+    margin-right: 0%;
+  }
+  .carte:hover .animation_check .fas {
+    transform: rotate(-360deg);
+    transition: transform 500ms;
   }
   .titre_plat {
-    margin-left: 5%;
+    margin-left: 4%;
+    margin-top: 0%;
     margin-bottom: 0%;
-    margin-top: 10%;
   }
   .bouton {
     display: flex;
@@ -297,32 +337,18 @@ footer a {
     align-items: center;
   }
   .bouton input {
-    padding: 5%;
-    border-radius: 30px 30px 30px 30px;
+    padding: 2%;
+    border-radius: 60px 60px 60px 60px;
     background: linear-gradient(#FF79DA, #9356DC);
     color: white;
     border: none;
-    margin-bottom: 12%;
-    margin-top: 12%;
-    box-shadow: 3px 3px 3px gray;
-    font-size: 100%;
-  }
-  footer {
-    background-color: rgb(44, 40, 40);
-    display: flex;
-    flex-direction: column;
-    color: white;
-  }
-  footer h3 {
-    font-family: "Shrikhand", cursive;
-    margin-left: 6%;
-  }
-  footer i {
-    margin-right: 4%;
-  }
-  footer a {
-    margin-left: 5%;
+    margin-bottom: 5%;
     margin-top: 4%;
+    box-shadow: 3px 3px 3px gray;
+    font-size: 200%;
+  }
+  .bouton input:hover {
+    background: linear-gradient(#f7a4df, #af7eec);
   }
   section {
     margin-top: -4rem;
@@ -335,27 +361,51 @@ footer a {
     background-color: #99E2D0;
     width: 45px;
     height: 4px;
-    margin-bottom: 5%;
-    margin-left: 5%;
+    margin-bottom: 2%;
+    margin-left: 4%;
   }
   .trait_plats {
     background-color: #99E2D0;
     width: 38px;
     height: 4px;
-    margin-bottom: 5%;
-    margin-left: 5%;
+    margin-bottom: 2%;
+    margin-left: 4%;
   }
   .trait_desserts {
     background-color: #99E2D0;
     width: 45px;
     height: 4px;
-    margin-bottom: 5%;
-    margin-left: 5%;
+    margin-bottom: 2%;
+    margin-left: 4%;
+  }
+  footer {
+    background-color: rgb(44, 40, 40);
+    display: flex;
+    flex-direction: column;
+    color: white;
+  }
+  footer h3 {
+    font-family: "Shrikhand", cursive;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  footer i {
+    margin-right: 0.5%;
+  }
+  footer a {
+    margin-left: 4%;
+    margin-top: 1%;
+    color: white;
+    text-decoration: none;
   }
 }
 @media all and (min-width: 768px) and (max-width: 992px) {
   .h_restaurants__titre {
     margin-left: 23%;
+  }
+  .titre i {
+    padding-top: 9.5%;
   }
   .carte:hover .animation_check {
     margin-right: -18px;
