--- a/css/accueil.scss
+++ b/css/accueil.scss
@@ -310,7 +310,7 @@ footer {
         justify-content: center;
         text-shadow: 1px 1px 1px #9356DC;
         color:white;
-        font-size: 300%;
+        font-size: 350%;
         margin-top: 0%;
         margin-bottom: 0%;
         padding-top: 3%;
@@ -324,13 +324,13 @@ footer {
         width: 100%;
         height: 80px;
         margin-top: 0%;
-        padding-top: 2%;
+        padding-top: 0%;
         padding-bottom: 2%;
     }
     &__icon {
         padding-top: 2.8%;
         margin-right: 1%;
-        margin-left: 44.5%;
+        margin-left: 46%;
     }
     & p {
         padding-top: 0.7%;
@@ -349,6 +349,7 @@ footer {
         margin-top: 0%;
         margin-bottom: 0%;
         margin-left: 2%;
+        font-size: 50px;
     }
     .reservez {
         margin-top: 2%;
@@ -360,10 +361,11 @@ footer {
         margin-top: 0%;
         margin-bottom: 2%;
         margin-left: 3%;
+        font-size: 30px;
+    }
     &.p_un_recherche {
         margin-top: 2%;
-        }
-    }
+    }    
     & input {
         padding: 1%;
         margin-top: 2%;
@@ -392,8 +394,7 @@ footer {
         margin-left: 0%;
         margin-top: 0%;
         padding-top: 2%;
-        padding-bottom: 2%;
-    
+        padding-bottom: 2%;    
         color: white;
         background: linear-gradient(#FF79DA, #9356DC);
         box-shadow: 0px 0px 10px 0px #9356DC;    
@@ -406,7 +407,7 @@ footer {
         border-radius: 20px 20px 20px 20px;
         box-shadow: 0px 0px 7px 0px;
         width: 27%;
-        height: 60px;
+        height: 70px;
         margin-top: 5%;
         margin-bottom: 1%;
         margin-right: 3%;
@@ -417,6 +418,7 @@ footer {
         }
     }
     &__icon {
+        padding-top: 4.5%;
         margin-right: 5%;
         margin-left: 5%;
         color: grey;
@@ -460,17 +462,17 @@ footer {
     }
     &__carte {
         width: 40%;
-        height: 320px;
+        height: 400px;
         background-color: white;
         border-radius: 20px 20px 20px 20px;
         box-shadow: 0px 0px 7px 0px;
-        margin-bottom: 5%;
+        margin-bottom: 1%;
         margin-left: 3%;
         position: relative;
     }      
     &__img {
         object-fit: cover;
-        height: 250px;
+        height: 330px;
         width: 100%;
         // Permet de gérer la position de l'image
         object-position: 70% 63%;
@@ -494,7 +496,7 @@ footer {
             padding-top: 6%;       
             & .jauge {
                 position: absolute;
-                top: 250px;
+                top: 300px;
                 color: black;
             }                
             & .jauge_remplissage {    
@@ -502,7 +504,7 @@ footer {
                     // Permet que le background s'affiche à l'intérieur du coeur
                     background-clip: text;              
                     position: absolute;
-                    top: 250px;
+                    top: 300px;
                     opacity: 0;
                     color: transparent;                    
                     &:hover {
@@ -545,7 +547,7 @@ footer {
         color: white;
     }
 }
-}
+
 
 
 
@@ -591,8 +593,4 @@ footer {
       
     }
 }
-
-    
-
-
-    
+}
