--- a/css/restaurants.scss
+++ b/css/restaurants.scss
@@ -42,16 +42,16 @@
     font-size: 15px;
     & .heart {
         & .jauge {
-            top: -1px;
-            right: 30px;
+            top: -15px;
+            right: 50px;
             position: absolute;
         }
         & .jauge_remplissage {
             background-image:  linear-gradient(#FF79DA, #9356DC);
             // Permet que le background s'affiche à l'intérieur du coeur
             background-clip: text; 
-            top: -1px;
-            right: 30px;
+            top: -15px;
+            right: 50px;
             position: absolute;             
             opacity: 0;
             color: transparent;           
@@ -240,12 +240,12 @@ h1 {
     display: flex;
     flex-direction: row;
     &__titre {
-        font-size: 80px;
-        margin-left: 25%;
+        font-size: 90px;
+        margin-left: 30%;
         text-shadow: 1px 1px 1px #9356DC;
     }
     &__fleche {
-        padding-top: 10%;
+        padding-top: 7%;
         padding-left: 5%;
         font-weight: bold;
     }
@@ -260,13 +260,31 @@ h1 {
 }
 
 .titre {
-    font-size: 50px;
+    font-size: 40px;
+    margin-left: 8%;
     display: flex;
     justify-content: space-around;
-    border-radius: 40px 40px 40px 40px;
-    & i {
-        padding-top: 8.5%;
-        margin-right: 5%;
+    & .heart {
+        & .jauge {
+            top: 60px;
+            right: 200px;
+            position: absolute;
+            
+        }
+        & .jauge_remplissage {
+            background-image:  linear-gradient(#FF79DA, #9356DC);
+            // Permet que le background s'affiche à l'intérieur du coeur
+            background-clip: text; 
+            top: 60px;
+            right: 200px;
+            position: absolute;             
+            opacity: 0;
+            color: transparent;           
+            &:hover {
+                opacity: 1;
+                transition: all 1s;
+            }
+        }        
     }
 }
 
