--- a/css/restaurants.css
+++ b/css/restaurants.css
@@ -174,6 +174,10 @@ footer {
   flex-direction: column;
   color: white;
 }
+footer .liens_footer {
+  display: flex;
+  flex-direction: column;
+}
 footer h3 {
   font-family: "Shrikhand", cursive;
   margin-left: 6%;
@@ -230,10 +234,6 @@ section {
   h1 {
     font-family: "Shrikhand", sans-serif;
   }
-  .h_restaurants {
-    display: flex;
-    flex-direction: row;
-  }
   .h_restaurants__titre {
     font-size: 90px;
     margin-left: 30%;
@@ -241,16 +241,12 @@ section {
   }
   .h_restaurants__fleche {
     padding-top: 7%;
-    padding-left: 5%;
-    font-weight: bold;
   }
   .bg_image {
-    max-width: 100%;
     max-height: 32rem;
-    width: 100%;
-    min-width: 360px;
     -o-object-fit: cover;
        object-fit: cover;
+    min-width: 360px;
   }
   .titre {
     font-size: 40px;
@@ -278,16 +274,11 @@ section {
     transition: all 1s;
   }
   .carte {
-    display: flex;
-    justify-content: space-between;
-    border-radius: 20px 20px 20px 20px;
-    box-shadow: 5px 5px 15px 0px #dedddd;
     max-height: 100px;
     padding-top: 1px;
     margin-bottom: 2%;
     margin-left: 3%;
     margin-right: 3%;
-    overflow: hidden;
     -webkit-animation-name: affichage;
             animation-name: affichage;
     -webkit-animation-duration: 2s;
@@ -305,8 +296,6 @@ section {
     margin-left: 2%;
   }
   .carte__prix {
-    display: flex;
-    justify-content: flex-end;
     width: 50%;
     margin-left: 2%;
   }
@@ -314,7 +303,6 @@ section {
     padding-top: 7%;
     margin-top: 3%;
     margin-right: 3%;
-    font-weight: bold;
   }
   .carte__prix .animation_check {
     width: 80px;
@@ -344,64 +332,41 @@ section {
     margin-top: 0%;
     margin-bottom: 0%;
   }
-  .bouton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
   .bouton input {
     padding: 2%;
     border-radius: 60px 60px 60px 60px;
-    background: linear-gradient(#FF79DA, #9356DC);
-    color: white;
-    border: none;
     margin-bottom: 5%;
     margin-top: 4%;
-    box-shadow: 3px 3px 3px gray;
     font-size: 200%;
   }
   .bouton input:hover {
     background: linear-gradient(#f7a4df, #af7eec);
   }
-  section {
-    margin-top: -4rem;
-    border-radius: 50px 50px 0 0;
-    background-color: #f6f6f6;
-    z-index: 1;
-    position: relative;
-  }
   .trait_entrees {
-    background-color: #99E2D0;
-    width: 45px;
-    height: 4px;
     margin-bottom: 2%;
     margin-left: 4%;
   }
   .trait_plats {
-    background-color: #99E2D0;
-    width: 38px;
-    height: 4px;
     margin-bottom: 2%;
     margin-left: 4%;
   }
   .trait_desserts {
-    background-color: #99E2D0;
-    width: 45px;
-    height: 4px;
     margin-bottom: 2%;
     margin-left: 4%;
   }
   footer {
-    background-color: rgb(44, 40, 40);
     display: flex;
     flex-direction: column;
-    color: white;
+  }
+  footer .liens_footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
   }
   footer h3 {
-    font-family: "Shrikhand", cursive;
     display: flex;
     justify-content: center;
-    align-items: center;
+    margin-left: 5%;
   }
   footer i {
     margin-right: 0.5%;
@@ -410,7 +375,6 @@ section {
     margin-left: 4%;
     margin-top: 1%;
     color: white;
-    text-decoration: none;
   }
 }
 @media all and (min-width: 768px) and (max-width: 992px) {
