--- a/css/restaurants.scss
+++ b/css/restaurants.scss
@@ -169,14 +169,18 @@ footer {
     display: flex;
     flex-direction: column;
     color: white;
-    h3 {
+    & .liens_footer {
+        display: flex;
+        flex-direction: column;
+    }
+    & h3 {
         font-family: 'Shrikhand', cursive ;
         margin-left: 6%;
     }
-    i {
+    & i {
         margin-right: 4%;
     }
-    a {
+    & a {
         margin-left: 5%;
         margin-top: 4%;
         color: white;
@@ -235,8 +239,6 @@ h1 {
 }
 
 .h_restaurants {
-    display: flex;
-    flex-direction: row;
     &__titre {
         font-size: 90px;
         margin-left: 30%;
@@ -244,17 +246,13 @@ h1 {
     }
     &__fleche {
         padding-top: 7%;
-        padding-left: 5%;
-        font-weight: bold;
     }
 }
 
 .bg_image{
-    max-width: 100%;
     max-height: 32rem;
-    width: 100%;
-    min-width: 360px ;
-    object-fit: cover;    
+    object-fit: cover;
+    min-width: 360px ;   
 }
 
 .titre {
@@ -288,16 +286,12 @@ h1 {
 
 
 .carte {
-    display: flex;
-    justify-content: space-between;
-    border-radius: 20px 20px 20px 20px;
-    box-shadow: 5px 5px 15px 0px #dedddd;
     max-height: 100px;
     padding-top: 1px;
     margin-bottom: 2%;
     margin-left: 3%;
     margin-right: 3%;
-    overflow: hidden;
+
     // Carractéristiques animation affichage plats
     animation-name: affichage;
     animation-duration: 2s;
@@ -313,15 +307,12 @@ h1 {
         }
     }
     &__prix {
-        display: flex;  
-        justify-content: flex-end;
         width: 50%;     
         margin-left: 2%;
         & .price {
             padding-top: 7%;
             margin-top: 3%;
             margin-right: 3%;
-            font-weight: bold;
         }
         & .animation_check {
             width: 80px;
@@ -356,18 +347,11 @@ h1 {
 }
 
 .bouton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     input {
         padding: 2%;
         border-radius: 60px 60px 60px 60px;
-        background: linear-gradient(#FF79DA, #9356DC);
-        color: white;
-        border: none;
         margin-bottom: 5%;
         margin-top: 4%;
-        box-shadow: 3px 3px 3px gray;
         font-size: 200%;
         &:hover {
             background: linear-gradient(#f7a4df, #af7eec);
@@ -375,48 +359,33 @@ h1 {
     }
 }
 
-section {
-    margin-top: -4rem;
-    border-radius: 50px 50px 0 0;
-    background-color: #f6f6f6;
-    z-index: 1;
-    position: relative;
-}
-
 .trait_entrees {
-    background-color: #99E2D0;
-    width: 45px;
-    height: 4px;
     margin-bottom: 2%;
     margin-left: 4%;
 }
 
 .trait_plats {
-    background-color: #99E2D0;
-    width: 38px;
-    height: 4px;
     margin-bottom: 2%;
     margin-left: 4%;
 }
 
 .trait_desserts {
-    background-color: #99E2D0;
-    width: 45px;
-    height: 4px;
     margin-bottom: 2%;
     margin-left: 4%;
 }
 
 footer {
-    background-color: rgb(44, 40, 40);
     display: flex;
     flex-direction: column;
-    color: white;
+    & .liens_footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
     & h3 {
-        font-family: 'Shrikhand', cursive ;
         display: flex;
         justify-content: center;
-        align-items: center;
+        margin-left: 5%;
     }
     & i {
         margin-right: 0.5%;
@@ -425,7 +394,6 @@ footer {
         margin-left: 4%;
         margin-top: 1%;
         color: white;
-        text-decoration: none;
     }
 }
 
